--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, tom-lvm]
+    runs-on: [self-hosted, alpine-build]
 
     env:
       DEBIAN_FRONTEND: noninteractive
