--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,32 +9,18 @@ jobs:
   build:
     runs-on: [self-hosted, alpine-build]
 
-    env:
-      DEBIAN_FRONTEND: noninteractive
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install basic dependencies
+      - name: Run build in Ubuntu 22.04 Docker container
         run: |
-          sudo apt update
-          sudo apt install -y openssh-client git sudo build-essential gcc-aarch64-linux-gnu \
-            bison qemu-user-static qemu-system-arm qemu-efi u-boot-tools binfmt-support \
-            debootstrap flex libssl-dev bc rsync kmod cpio xz-utils fakeroot parted \
-            udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 \
-            python-is-python3 fdisk bc debhelper python3-pyelftools python3-setuptools \
-            python3-distutils python3-pkg-resources swig libfdt-dev libpython3-dev \
-            dctrl-tools pkg-config libncurses-dev lz4 cryptsetup
-
-      - name: Make build script executable
-        run: chmod +x build.sh
-
-      - name: Build all
-        run: |
-          ./build.sh all
-          TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-          mv build/output/update.img build/output/update-${TIMESTAMP}.img
+          docker run --rm -v $PWD:/workspace -w /workspace ubuntu-22.04-build-env bash -c "
+            chmod +x build.sh &&
+            ./build.sh all &&
+            TIMESTAMP=\$(date +%Y%m%d-%H%M%S) &&
+            mv build/output/update.img build/output/update-\${TIMESTAMP}.img
+          "
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
