--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: [self-hosted, alpine-build]
 
     steps:
+      - name: Fix permissions before checkout
+        run: sudo chown -R $USER:$USER $GITHUB_WORKSPACE || true
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
