--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
             --mount type=bind,source=/etc/group,target=/etc/group,readonly \
             --mount type=bind,source=/etc/shadow,target=/etc/shadow,readonly \
             --mount type=bind,source=/etc/sudoers,target=/etc/sudoers,readonly \
-            --user $(id -u):$(id -g) \
+            --u root \
             ubuntu-22.04-build-env bash -c "
               set -e
               cd /workspace
@@ -37,9 +37,6 @@ jobs:
               TIMESTAMP=\$(date +%Y%m%d-%H%M%S)
               mv build/output/update.img build/output/update-\${TIMESTAMP}.img
             "
-
-      - name: Fix build directory permissions after build
-        run: sudo chown -R $(id -u):$(id -g) build/
 
       - name: Upload update image artifact
         uses: actions/upload-artifact@v4
